Closed Bug 1208815 Opened 9 years ago Closed 9 years ago

dragging a word in a text box will make firefox crash (part 2)

Categories

(Core :: DOM: Events, defect)

44 Branch
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: c, Assigned: c)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:41.0) Gecko/20100101 Firefox/41.0
Build ID: 20150927083424
Comment on attachment 8666427 [details] [diff] [review]
Use the legacy opt-out in GetMozSourceNode to avoid crashes

Review of attachment 8666427 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good as a stopgap. Thanks!
Attachment #8666427 - Flags: review?(bobbyholley) → review+
See Also: → 1208517
Component: General → DOM: Events
https://hg.mozilla.org/mozilla-central/rev/8fe65e4b68cb
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Assignee: nobody → zhoubcfan
Version: Trunk → 44 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: