Bug 1208815 - Use the legacy opt-out in GetMozSourceNode to avoid crashes. r=bholley